# parallel-prog2

./: CMakeLists.txt  README.md  checkout.ipynb
lab1/: matrix1.cpp  results_lab1.txt
lab2/: matrix2.cpp  results_lab2.txt
lab3/: matrix3.cpp  results_lab3_1.txt  results_lab3_2.txt  results_lab3_4.txt  results_lab3_8.txt
matrix/: matrixA_100.txt  matrixA_1000.txt  matrixA_200.txt  matrixA_300.txt  matrixA_400.txt  matrixA_500.txt  matrixA_600.txt  matrixA_700.txt  matrixA_800.txt  matrixA_900.txt  matrixB_100.txt  matrixB_1000.txt  matrixB_200.txt  matrixB_300.txt  matrixB_400.txt  matrixB_500.txt  matrixB_600.txt  matrixB_700.txt  matrixB_800.txt  matrixB_900.txt  matrixC_100.txt  matrixC_200.txt  matrixC_300.txt  matrixC_400.txt  matrixC_500.txt  matrixC_600.txt  matrixC_700.txt  matrixC_800.txt
